--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -30,7 +30,8 @@ dependencies {
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+	testImplementation 'org.assertj:assertj-core:3.24.2'
 }
 
 tasks.named('test') {
